# EQUITR-coder

./: .EQUITR_todos.json  .coveragerc  .flake8  .gitignore  .gitignore.old  .mailmap  .pre-commit-config.yaml  AUDIT_REASONING_SYSTEM.md  BOOTSTRAP_COMPLETE.md  CHANGELOG.md  CLEAN_ARCHITECTURE_SUMMARY.md  COMPREHENSIVE_TESTING_SUMMARY.md  DEPENDENCY_AWARE_SYSTEM_UPGRADE.md  Dockerfile  FEATURE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUCCESS_REPORT.md  MERGE_COMPLETION_SUMMARY.md  MIGRATION.md  MISSING_FEATURES_ANALYSIS.md  MULTI_AGENT_GUIDE.md  Makefile  README.md  SUPERVISOR_QUERY.md  TERMINAL_EXAMPLES.md  USAGE_GUIDE.md  all_files_combined.txt  audit_reasoning_example.py  cli_research_demo.py  combine_files.py  config.json  demo_no_team.json  demo_todo_structure.py  generate_repo_dump.py  generate_repo_report.py  install.sh  mypy.ini  pyproject.toml  pytest.ini  repo_dump.txt  (+26 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
EQUITR_coder/: __init__.py
agent_workspace/: .EQUITR_audit_history.json  .EQUITR_todos.json  test_complete_workflow.py  test_multi_agent.py  test_workflow.py
agent_workspace/docs/: design.md  requirements.md  todos.md  todos_agent_1.md  todos_agent_2.md
assets/: __init__.py
assets/fonts/: __init__.py
assets/images/: README.md  __init__.py
assets/sounds/: README.md  __init__.py
audit_test/: .EQUITR_todos.json  escalation_report.md
audit_test/docs/: design.md  requirements.md
audit_test_final/: .EQUITR_audit_history.json  .EQUITR_todos.json  audit.py
audit_test_final/docs/: requirements.md
clean_architecture_test/: AUDIT_REPORT.md  api_test.py  calculator.py  debug_test.py  minimal_test.py  quick_test_single.py  test_all_modes.py  test_with_kimi.py
clean_architecture_test/sales_analysis/: requirements.txt
clean_architecture_test/templates/: index.html
clean_testing/: task.py  test_clean_architecture.py  test_multi_agent_no_parallel.py  test_multi_agent_parallel.py  test_multi_quick.py  test_single_agent_clean.py  test_single_agent_fixed.py  test_single_agent_true_mode.py  utils.py
docs/: ADDING_CUSTOM_TOOLS.md  ASK_SUPERVISOR_GUIDE.md  AUDIT_SYSTEM.md  CLI_GUIDE.md  CONFIGURATION_GUIDE.md  CREATING_MODES.md  CREATING_PROFILES.md  DEVELOPMENT_SETUP.md  DEV_ENV_SETUP.md  MCP_INTEGRATION_GUIDE.md  PROGRAMMATIC_USAGE_GUIDE.md  README.md  TOOL_LOGGING_AND_MULTI_MODEL_GUIDE.md  TUI_GUIDE.md  USAGE_GUIDE.md
docs/test_session/: group_sections.json  requirements.md  todos.json
equitrcoder/: __init__.py  api.py  cli.py  interactive_cli.py  simple_cli.py  simplest_cli.py
equitrcoder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
equitrcoder/agents/: __init__.py  audit_agent.py  base_agent.py  worker_agent.py
equitrcoder/api/: model_api.py  server.py
equitrcoder/cli/: audit_monitor.py  main_cli.py  model_cli.py  unified_main.py
equitrcoder/config/: default.yaml  mcp_registry.json  mcp_servers.json  profiles.yaml  system_prompt.yaml
equitrcoder/core/: __init__.py  audit_monitor.py  clean_agent.py  clean_orchestrator.py  config.py  config_validator.py  (+24 more)
examples/: README.md  create_react_website.py  git_checkpoint_example.py  mario_parallel_example.py  multi_agent_example.py  quickstart.md  research_example.py  research_programmatic_example.py  task_group_multi_agent.py  task_group_single_agent.py  tool_logging_example.py  tui_e2e_models_example.py
experiments/lr_research_demo/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  runner.py
experiments/lr_research_demo/.github/workflows/: ci.yml
experiments/lr_research_demo/artifacts/: comparison_report.md
experiments/lr_research_demo/artifacts/20250824_070344/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/artifacts/20250824_070345/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/artifacts/20250824_070346/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/artifacts/20250824_070912/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/artifacts/20250824_070913/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/artifacts/20250824_070914/: config.json  metrics.json
experiments/lr_research_demo/artifacts/20250824_073142/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/artifacts/20250824_073143/: config.json  metrics.json  metrics.jsonl
experiments/lr_research_demo/docs/task_20250824_014708/: README.md  design.md  experiments.yaml  metadata.json  requirements.md  requirements_issue.md  research_plan.yaml  research_report.md  runs_summary.csv  todos.json  validation_report.json
experiments/lr_research_demo/docs/task_20250824_014708/data/: dataset.csv  dataset_meta.json
experiments/lr_research_demo/docs/task_20250824_014708/runs/: 1_20250824T070911Z.json  1_20250824T073141Z.json  2_20250824T070344Z.json  2_20250824T070912Z.json  2_20250824T073142Z.json  3_20250824T070345Z.json  3_20250824T070912Z.json  3_20250824T073142Z.json  4_20250824T070345Z.json  4_20250824T070913Z.json  4_20250824T073143Z.json  5_20250824T070346Z.json  5_20250824T070913Z.json  5_20250824T073143Z.json
experiments/lr_research_demo/scripts/: __init__.py  artifacts.py  exec_experiments.py  install_precommit.sh  run_lr.py  setup_env.sh  validate_results.py  validation.py
experiments/lr_research_demo/scripts/data_pipeline/: __init__.py  config.py  ingest.py  preprocess.py
experiments/lr_research_demo/scripts/examples/: dataset.yaml  tiny_sample.csv
experiments/lr_research_demo/scripts/tests/: test_cli.py  test_data_pipeline.py
game/: __init__.py  main.py  settings.py
levels/: __init__.py
scripts/: check_custom_tools.py  create_placeholders.py  run_tui_smoke.sh  test_mcp_ddg.py
src/: __init__.py
testing/: .EQUITR_audit_history.json  .EQUITR_todos.json  comprehensive_test_framework.py  run_parallel_tests.py  test_environment_manager.py  test_isolated_tasks.py  test_multi_agent_suite.py  test_quick_implementation.py  test_single_agent_suite.py
tests/: __init__.py
(+395 files in other folders)
