[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "equitrcoder"
version = "1.0.3"
description = "Modular AI coding assistant supporting single and multi-agent workflows"
authors = [{name = "EQUITR", email = "coder@equitr.com"}]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["ai", "coding", "assistant", "agent", "multi-agent", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "litellm>=1.0.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
    "tenacity>=8.2.0",
    "colorama>=0.4.6",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "gitpython>=3.1.40",
    "psutil>=5.9.0",
    "pathspec>=0.10.0",
    "ddgs>=6.0.0",
    "python-dateutil>=2.8.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
tui = [
    "textual>=0.45.0",
    "rich>=13.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
    "isort>=5.12.0",
]
all = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0", 
    "textual>=0.45.0",
    "rich>=13.0.0",
]

[project.scripts]
equitrcoder = "equitrcoder.cli.unified_main:main"
equitr = "equitrcoder.cli.unified_main:main"

[project.urls]
Homepage = "https://github.com/equitr/equitrcoder"
"Bug Reports" = "https://github.com/equitr/equitrcoder/issues"
Source = "https://github.com/equitr/equitrcoder"
Documentation = "https://equitrcoder.readthedocs.io/"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]